Fixed skills-list horizontal alignment
On My Expertise page

--- a/_src/sass/layouts/_expertise.scss
+++ b/_src/sass/layouts/_expertise.scss
@@ -28,6 +28,8 @@
 .skill-list {
     @include clearfix;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
     list-style: none;
 
     li {
